styling editor and fix overflow

--- a/src/components/Explorer/explorer.scss
+++ b/src/components/Explorer/explorer.scss
@@ -1,6 +1,6 @@
 .explorer-container{
     width: 300px;
-    height: 95vh;
+    max-height: calc(100% - 45px);
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
