--- a/src/components/pages/pages.scss
+++ b/src/components/pages/pages.scss
@@ -1,4 +1,5 @@
 .notes-page{
     display: flex;
     flex-direction: row;
+    height: 100%;   
 }
