--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -9,9 +9,22 @@
   padding: 0;
 }
 
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 #root{
   width: 100%;
+  height: 100%;
   overflow: hidden;
+}
+
+.main-container{
+  height: 100%;
 }
 
 .Navgation-bar{
